methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: not found: value efface
      efface()
      ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getCouleurSol() != Color.green){
    ^